# YRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
YRendererCore/: CMakeLists.txt
YRendererCore/includes/YRendererCore/: Application.hpp  Event.hpp  Scene.h  Window.hpp  camera.h
YRendererCore/includes/YRendererCore/gpu/opengl/: gl_Context.h  gl_IndexBuffer.h  gl_Renderer.h  gl_ShaderProgram.h  gl_VertexArray.h  gl_VertexBuffer.h  gl_VertexBufferLayout.h
YRendererCore/src/YRendererCore/: Application.cpp  Scene.cpp  Window.cpp  Window.hpp
YRendererCore/src/YRendererCore/gpu/opengl/: gl_Context.cpp  gl_IndexBuffer.cpp  gl_IndexBuffer.h  gl_Renderer.cpp  gl_Renderer.h  gl_ShaderProgram.cpp  gl_ShaderProgram.h  gl_VertexArray.cpp  gl_VertexArray.h  gl_VertexBuffer.cpp  gl_VertexBuffer.h  gl_VertexBufferLayout.h
YRendererEditor/: CMakeLists.txt
YRendererEditor/src/: main.cpp
